# qa-tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
rules/: injection_rules.toml
src/holafly_qa/: __init__.py  main.py
src/holafly_qa/commands/: __init__.py  apk_cmd.py  cert_cmd.py  doctor_cmd.py  emulator_cmd.py  gui_cmd.py  init_cmd.py  inject_cmd.py  mitmweb_cmd.py
src/holafly_qa/gui/: __init__.pyu  app.py
src/holafly_qa/services/: __init__.py  apk.py  avd.py  cert.py  checks.py  config.py  emulator.py  injection.py  mitmweb.py  process.py  throttle.py
