[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holafly-qa"
version = "0.1.0"
description = "QA network interception tool for the Holafly Flutter app"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Holafly QA Team" }
]
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.0.0",
    "tomli-w>=1.0.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
qa-tool = "holafly_qa.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/holafly_qa"]